--- a/templates/map.html
+++ b/templates/map.html
@@ -389,7 +389,7 @@
             </div>
             <div id="weather-hour">
                 <div class="tab">
-                    <button id="default-button" class="tablinks" onclick="openWeather(event, 'temperature-chart')">Temperature(&#8451;)</button>
+                    <button class="tablinks active" onclick="openWeather(event, 'temperature-chart')">Temperature(&#8451;)</button>
                     <button class="tablinks" onclick="openWeather(event, 'precipitation-chart')">Precipitation(%)</button>
                     <button class="tablinks" onclick="openWeather(event, 'wind-chart')">Windspeed(km/h)</button>
                 </div>
