--- a/static/style.css
+++ b/static/style.css
@@ -227,18 +227,14 @@ input:focus-visible {
     font: 12px Roboto, Arial, sans-serif;
 }
 
-#default-button{
-    border-bottom: #33CCCC 2px solid;
-}
-
 /* Change background color of buttons on hover */
-.tab button:hover {
-    border-bottom: #33CCCC 2px solid;
+.tab button:hover #default-button:hover{
+    border-bottom: #FF4500 2px solid;
 }
 
 /* Create an active/current tablink class */
 .tab button.active {
-    border-bottom: #33CCCC 2px solid;
+    border-bottom: #FF4500 2px solid;
 }
 
 /* Style the tab content */
