--- a/templates/map.html
+++ b/templates/map.html
@@ -244,7 +244,7 @@
     <div id="side-bar">
         <div id="pac-container">
             <form id="pac-form">
-                <input id="pac-input" type="text" placeholder="Enter a location" />
+                <input id="pac-input" type="text" placeholder="Enter your location" />
             </form>
         </div>
         <div id="nearest-stations">
@@ -281,7 +281,7 @@
             <div id="station-history">
                 <div class="tabchart">
                     <button class="charttablinks active" onclick="openChart(event, 'daily-average')">By day of week</button>
-                    <button class="charttablinks" onclick="openChart(event, 'hourly-average')">By hour </button>
+                    <button class="charttablinks" onclick="openChart(event, 'hourly-average')">By hour - same day of week </button>
                 </div>
                 <div class="average-chart active" id="daily-average"></div>
                 <div class="average-chart" id="hourly-average"></div>
