change marker icon

--- a/templates/map.html
+++ b/templates/map.html
@@ -37,6 +37,10 @@
                 var newMarker = new google.maps.Marker({
                     position: marker.position,
                     title: marker.title,
+                    icon: {
+                        url: 'http://maps.google.com/mapfiles/ms/icons/bike.png',
+                        scaledSize: new google.maps.Size(32, 32),
+                    },
                     map: map
                 });
                 // Add the new marker to the mapMarkers array
