--- a/templates/map.html
+++ b/templates/map.html
@@ -36,6 +36,10 @@
                 var marker = markers[i];
                 var newMarker = new google.maps.Marker({
                     position: marker.position,
+                    icon: {
+                        url: 'https://img.icons8.com/color/48/null/bicycle.png',
+                        scaledSize: new google.maps.Size(35, 35),
+                    },
                     title: marker.title,
                     map: map
                 });
@@ -114,43 +118,41 @@
                 
                 
                 });
-
-                var heatmapData = markers.map(function(marker) {
-                    return {
-                        location: new google.maps.LatLng(marker.position.lat, marker.position.lng),
-                        weight: marker.available_bikes
-                    };
-                });
-            
-                var heatmap = new google.maps.visualization.HeatmapLayer({
-                    data: heatmapData,
-                    dissipating: true,
-                    gradient: [
-                        "rgba(0, 255, 255, 0)", 
-                        "rgba(0, 255, 255, 0.5)", 
-                        "rgba(0, 191, 255, 0.5)", 
-                        "rgba(0, 127, 255, 0.5)", 
-                        "rgba(0, 63, 255, 0.5)", 
-                        "rgba(0, 0, 255, 0.5)",
-                        "rgba(0, 0, 223, 0.5)",
-                        "rgba(0, 0, 191, 0.5)",
-                        "rgba(0, 0, 159, 0.5)",
-                        "rgba(0, 0, 127, 0.5)",
-                        "rgba(63, 0, 91, 0.5)",
-                        "rgba(127, 0, 63, 0.5)",
-                        "rgba(191, 0, 31, 0.5)",
-                        "rgba(255, 0, 0, 0.5)",
-                    ],
-                    maxIntensity: 30, // Change this value according to the highest number of available bikes at your stations
-                    radius: 30, // Adjust the radius to change the appearance of the heatmap
-                    //opacity: 0.5,
-                });
-            
-                heatmap.setMap(map);
-
-                
-
             }
+            
+            var heatmapData = markers.map(function(marker) {
+                return {
+                    location: new google.maps.LatLng(marker.position.lat,marker.position.lng),
+                    weight: marker.available_bikes
+                };
+            });
+            console.log(heatmapData);
+        
+            var heatmap = new google.maps.visualization.HeatmapLayer({
+                data: heatmapData,
+                dissipating: true,
+                gradient: [
+                    "rgba(0, 255, 255, 0)", 
+                    "rgba(0, 255, 255, 1)", 
+                    "rgba(0, 191, 255, 1)", 
+                    "rgba(0, 127, 255, 1)", 
+                    "rgba(0, 63, 255, 1)", 
+                    "rgba(0, 0, 255, 1)",
+                    "rgba(0, 0, 223, 1)",
+                    "rgba(0, 0, 191, 1)",
+                    "rgba(0, 0, 159, 1)",
+                    "rgba(0, 0, 127, 1)",
+                    "rgba(63, 0, 91, 1)",
+                    "rgba(127, 0, 63, 1)",
+                    "rgba(191, 0, 31, 1)",
+                    "rgba(255, 0, 0, 1)",
+                ],
+                maxIntensity: 30, // Change this value according to the highest number of available bikes at your stations
+                radius: 30, // Adjust the radius to change the appearance of the heatmap
+            });
+        
+            heatmap.setMap(map);
+            
 
             const input = document.getElementById("pac-input");            
 
@@ -235,9 +237,6 @@
             });
             
         };
-
-        
-
     </script>
 </head>
 
@@ -249,7 +248,7 @@
     <div id="side-bar">
         <div id="pac-container">
             <form id="pac-form">
-                <input id="pac-input" type="text" placeholder="Enter a location" />
+                <input id="pac-input" type="text" placeholder="Enter your location" />
             </form>
         </div>
         <div id="nearest-stations">
@@ -286,7 +285,7 @@
             <div id="station-history">
                 <div class="tabchart">
                     <button class="charttablinks active" onclick="openChart(event, 'daily-average')">By day of week</button>
-                    <button class="charttablinks" onclick="openChart(event, 'hourly-average')">By hour </button>
+                    <button class="charttablinks" onclick="openChart(event, 'hourly-average')">By hour - same day of week </button>
                 </div>
                 <div class="average-chart active" id="daily-average"></div>
                 <div class="average-chart" id="hourly-average"></div>
